--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ input[type='checkbox'] {
 
 .text-with-image h1 {
   position: relative;
-  font-size: 180px;
+  font-size: 130px;
 }
 
 /* Image text styles */
@@ -424,7 +424,7 @@ input[type='checkbox'] {
 
 /* Image text styles */
 .image-text {
- font-size: 100px;
+ /* font-size: 100px; */
   /* Replace with your image path */
   background-size: contain;
   background-clip: text;
@@ -486,6 +486,36 @@ input[type='checkbox'] {
   font-size: 12px;
   margin-left: 5px;
 }
+
+
+/* Basic styling for the container and text */
+.text-with-image {
+  /* max-width: 600px; */
+  background-color: rgb(151, 0, 0);
+  /* margin: 0 auto; */
+  /* padding: 20px; */
+  /* font-size: 100px; */
+  text-align: center;
+}
+
+.text-with-image h1 {
+  position: relative;
+  font-size: 60px;
+}
+
+/* Image text styles */
+.image-text {
+ font-size: 100px;
+  /* Replace with your image path */
+  background-size: contain;
+  background-clip: text;
+  -webkit-background-clip: text;
+  /* For Safari/WebKit browsers */
+  color: transparent;
+  /* font-size: 200px; */
+  font-weight: bold;
+}
+
 }
 
 
@@ -557,12 +587,12 @@ input[type='checkbox'] {
 
 .text-with-image h1 {
   position: relative;
-  font-size: 70px;
+  font-size: 45px;
 }
 
 /* Image text styles */
 .image-text {
- font-size: 100px;
+ 
   /* Replace with your image path */
   background-size: contain;
   background-clip: text;
@@ -655,7 +685,7 @@ input[type='checkbox'] {
 
 /* Image text styles */
 .image-text {
- font-size: 200px;
+ font-size: 150px;
   /* Replace with your image path */
   background-size: contain;
   background-clip: text;
